adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, repellendus dolorum? Veniam explicabo, temporibus, voluptatibus nostrum a rem soluta, esse officiis quia minus rerum recusandae possimus debitis! Odit, consequatur facilis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt commodi quisquam laboriosam, aut temporibus aliquid exercitationem nostrum, necessitatibus laudantium numquam sit dolor quae. Culpa ipsum nesciunt, cupiditate perferendis in beatae.
+    </p>
 </body>
 </html>
